prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-api
spec:
  selector:
    matchLabels:
      app: prod-api
  replicas: 1
  template:
    metadata:
      labels:
        app: prod-api
    spec:
      hostNetwork: true
      containers:
      - name: prod-api
        image: danielneset/idata2306:prod-e034da1552c75b7c1a055c9e8bfa8c62bcad7bce
        ports:
        - containerPort: 8080
          protocol: TCP
