prod/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-web
spec:
  selector:
    matchLabels:
      app: prod-web
  replicas: 3
  template:
    metadata:
      labels:
        app: prod-web
    spec:
      containers:
      - name: prod-web
        image: danielneset/idata2301:prod-web-05d41bce3e97ced4647013f36c58b0d0f1564a1e
        ports:
        - containerPort: 3000
          protocol: TCP
