prod/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod2306-web-service
spec:
  selector:
    app: prod2306-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
