prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod2306-service
spec:
  selector:
    app: prod2306
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
