prod/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-web-service
spec:
  selector:
    app: prod-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
