prod/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod-idata2306-web
spec:
  ingressClassName: nginx
  rules:
  - host: flightfinder.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod2306-web-service
            port:
              number: 3000
