prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod-idata2306
spec:
  ingressClassName: nginx
  rules:
  - host: api.flightfinder.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod2306-service
            port:
              number: 8080
